[tool.poetry]
name = "sushitools"
version = "0.1.0"
description = "python package with various different utilities and tools to make life easier."
authors = ["munchii <daniellmunch@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Dmunch04/dtools"
repository = "https://github.com/Dmunch04/dtools"
keywords = ["tools", "tool"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Typing :: Typed"
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
